--- a/web/views/index.erb
+++ b/web/views/index.erb
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Tinycoin</title>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
         <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     </head>
     <body style="width:60%;margin:0 auto;text-align:center;">
         <h1>自作仮想通貨</h1>
